feat(signature): add fluent styles

--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -158,7 +158,7 @@
 @use "dataviz";
 @use "map";
 @use "orgchart";
-// @use "signature";
+@use "signature";
 
 // Setup
 @mixin config($config: null ) {
@@ -320,5 +320,5 @@
     @include dataviz.styles();
     @include map.styles();
     @include orgchart.styles();
-    // @include signature.styles();
+    @include signature.styles();
 }
