--- a/packages/fluent/scss/core/helpers/_base.scss
+++ b/packages/fluent/scss/core/helpers/_base.scss
@@ -1,5 +1,6 @@
 @use "../mixins" as *;
 @use "../variables" as *;
+@use "../color-system" as *;
 
 // Disabled state
 .k-disabled,
@@ -24,7 +25,7 @@
     height: 0;
     border-width: 1px 0 0;
     border-style: solid;
-    border-color:  var( --kendo-component-border, inherit );
+    border-color: var( --kendo-component-border, inherit );
     display: block;
     float: none;
     clear: both;
@@ -59,4 +60,87 @@
 
 .k-image {
     display: inline-block;
+}
+
+// Layout
+.k-reset {
+    margin: 0;
+    padding: 0;
+    border-width: 0;
+    outline: 0;
+    text-decoration: none;
+    font: inherit;
+    list-style: none;
+}
+
+kendo-sortable {
+    display: block;
+}
+
+
+// Links
+.k-link,
+.k-link:hover {
+    color: inherit;
+    text-decoration: none;
+    outline: 0;
+    cursor: pointer;
+}
+
+// Outline
+.k-content {
+    outline: 0;
+}
+
+// Centering
+.k-centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+// Disable mouse events
+.k-no-click {
+    pointer-events: none;
+}
+
+// Off-screen container used during PDF export
+.k-pdf-export-shadow {
+    position: absolute;
+    overflow: hidden;
+    left: -15000px;
+    width: 14400px;
+}
+
+// PDF export icons fix
+.kendo-pdf-hide-pseudo-elements::before,
+.kendo-pdf-hide-pseudo-elements::after {
+    // sass-lint:disable-block no-important
+    display: none !important;
+}
+
+// Placeholder
+.k-placeholder-line {
+    width: 100%;
+    height: 10px;
+    background-color: get-theme-color-var( neutral-20 );
+    display: inline-block;
+}
+
+// Dirty indicator
+.k-dirty {
+    margin: 0;
+    padding: 0;
+    width: 0;
+    height: 0;
+    border-width: 3px;
+    border-style: solid;
+    border-block-start-color: currentColor;
+    border-block-end-color: transparent;
+    border-inline-start-color: transparent;
+    border-inline-end-color: currentColor;
+    position: absolute;
+    inset-block-start: 0;
+    inset-inline-end: 0;
 }
