--- a/packages/fluent/scss/taskboard/_layout.scss
+++ b/packages/fluent/scss/taskboard/_layout.scss
@@ -121,9 +121,9 @@
         display: flex;
         flex-direction: column;
         position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
+        inset-block-start: 0;
+        inset-block-end: 0;
+        inset-inline-end: 0;
         overflow: hidden;
         z-index: 2;
     }
