--- a/packages/utils/scss/table/_table-layout.scss
+++ b/packages/utils/scss/table/_table-layout.scss
@@ -9,3 +9,4 @@
 $kendo-utils-table-layout: map-get( $kendo-utils, "table-layout" ) !default;
 
 @include generate-utils( table, table-layout, $kendo-utils-table-layout );
+@include generate-utils( table-layout, table-layout, $kendo-utils-table-layout );
