--- a/packages/fluent/scss/core/mixins/_decoration.scss
+++ b/packages/fluent/scss/core/mixins/_decoration.scss
@@ -25,3 +25,7 @@
         }
     }
 }
+
+@mixin repeating-striped-gradient( $color: rgba(255,255,255,.15), $background: #FFF, $angle: 45deg, $largeStep: 2px, $smallStep: 1px) {
+    background-image: repeating-linear-gradient($angle, $background, $background $smallStep, $color $smallStep, $color $largeStep);
+}
