--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -124,7 +124,7 @@
 @use "grid";
 @use "listview";
 // @use "spreadsheet";
-// @use "pivotgrid";
+@use "pivotgrid";
 @use "treelist";
 @use "filter";
 @use "filemanager";
@@ -283,7 +283,7 @@
     @include grid.styles();
     @include listview.styles();
     // @include spreadsheet.styles();
-    // @include pivotgrid.styles();
+    @include pivotgrid.styles();
     @include treelist.styles();
     @include filter.styles();
     @include filemanager.styles();
