feat(spreadsheet): add fluent styles

--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -123,7 +123,7 @@
 // Data management
 @use "grid";
 @use "listview";
-// @use "spreadsheet";
+@use "spreadsheet";
 @use "pivotgrid";
 @use "treelist";
 @use "filter";
@@ -282,7 +282,7 @@
     // Data management
     @include grid.styles();
     @include listview.styles();
-    // @include spreadsheet.styles();
+    @include spreadsheet.styles();
     @include pivotgrid.styles();
     @include treelist.styles();
     @include filter.styles();
