fix(utils): generate correct value for column-reverse util

--- a/packages/utils/scss/_variables.scss
+++ b/packages/utils/scss/_variables.scss
@@ -158,7 +158,7 @@ $kendo-utils: (
         row: row,
         row-reverse: row-reverse,
         col: column,
-        col-reverse: column
+        col-reverse: column-reverse
     ),
     "flex-wrap": (
         wrap,
