feat(fluent): add adaptive styles

--- a/packages/fluent/scss/gantt/_layout.scss
+++ b/packages/fluent/scss/gantt/_layout.scss
@@ -207,6 +207,10 @@
 
 
     // Responsive gantt toolbar
+    .k-gantt-toggle {
+        display: none;
+    }
+    
     @media (max-width: 480px) {
 
         .k-gantt-toolbar {
