fix(coloreditor): use smaller footer padding to comply with the design in fluent theme

--- a/packages/fluent/scss/coloreditor/_layout.scss
+++ b/packages/fluent/scss/coloreditor/_layout.scss
@@ -76,6 +76,8 @@
 
         // Footer
         .k-coloreditor-footer.k-actions {
+            padding-block: var( --kendo-coloreditor-footer-padding-y, #{$kendo-coloreditor-footer-padding-y} );
+            padding-inline: var( --kendo-coloreditor-footer-padding-y, #{$kendo-coloreditor-footer-padding-y} );
             margin: 0;
         }
 
