--- a/packages/fluent/scss/coloreditor/_variables.scss
+++ b/packages/fluent/scss/coloreditor/_variables.scss
@@ -73,3 +73,10 @@ $kendo-coloreditor-views-padding-x: $kendo-coloreditor-views-padding-y !default;
 /// Spacing of the color editor views container.
 /// @group coloreditor
 $kendo-coloreditor-views-spacing: $kendo-coloreditor-spacer !default;
+
+/// Horizontal padding of the color editor footer.
+/// @group coloreditor
+$kendo-coloreditor-footer-padding-y: map-get( $kendo-spacing, 2 ) !default;
+/// Vertical padding of the color editor footer.
+/// @group coloreditor
+$kendo-coloreditor-footer-padding-x: map-get( $kendo-spacing, 2 ) !default;
